<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (m)</string>
    <string name="calculate">Calculate</string>
    <string name="contentDescription">BMI illustrator</string>
    <string name="reset">Reset</string>
    <string name="bmi">BMI</string>
    <string name="status">Status</string>
    <string name="error_input">No input</string>
</resources>
